# moin2gitwiki

./: .bumpversion.cfg  .travis.yml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
moin2gitwiki/: categorytree.py  cli.py  context.py  gitrevision.py  moin2markdown.py  wikiindex.py
